更新README.md描述文件信息

--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,8 @@
             <version>RELEASE</version>
             <scope>test</scope>
         </dependency>
+        <!--导入SpringMVC-->
+
     </dependencies>
     <build>
         <plugins>
